Fixes styling on mobile and adds mobile image bg

--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,9 @@ body {
 
   overflow: hidden;
 }
+
+@media only screen and (max-width: 1080px) {
+  body {
+    background-image: url('./image/BAECAFE-mobilebackground.jpg');
+  }
+}
